update swagger.js for easy deployment
